2001-10-19  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-graph.c (gnm_graph_setup) : it is 'oaf-run-query'
	  Spew the informative message for all oaf exceptions.

2001-10-19  Morten Welinder  <terra@diku.dk>

	* src/number-match.c (compute_value): Fix parsing of decimal
 	fractions and exponents.

2001-10-19  Morten Welinder  <terra@diku.dk>

	* src/goal-seek.c (goal_seek_newton): Deliberately overshoot in
 	each iteration.  This makes it more likely that we get to hit both
 	sides of the root.
	(goal_seek_bisection): Introduce Newton steps when we're close to
 	a root.  Pick best of xmid, xneg, and xpos when we decide we have
 	the required precision.

2001-10-19  Jody Goldberg <jgoldberg@home.com>

	* configure.in : Until the gb plugin works with newer gb make
	the test == 0.17

2001-10-19  Morten Welinder  <terra@diku.dk>

	* src/goal-seek.c (goal_seek_bisection): Use mid-point bisection
 	more often.  Increase maximum number of iterations (just in case).

	* src/commands.c (cmd_ins_del_colrow_redo): Initialise cri, just
 	in case.

2001-10-18  Andreas J. Guelzow <aguelzow@taliesin.ca>

        * src/ranges.c/h (global_range_parse) : new function

2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* configure.in : post release bump.

2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* Release 0.72

2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* src/xml-io.c (xml_node_get_int) : use strtol
	(xml_node_get_double) : strtod.

	* src/number-match.c (format_match_number) : new.

	* src/expr.c (eval_expr_real) : format_match can match non-numbers now.

2001-10-18  Morten Welinder  <terra@diku.dk>

	* src/pixmaps/16_search.xpm: new file (derived from from Evolution).
	* src/application.c (application_init): Add search pixmap.
	* src/workbook-control-gui.c (workbook_menu_edit): Ditto.
	* src/GNOME_Gnumeric.xml: Ditto.

2001-10-17  Jody Goldberg <jgoldberg@home.com>

	* src/item-bar.c (ib_draw_cell) : add some protection in case of bad
	  fonts.
